#1209 fixed spacing between slider and product details

--- a/web/assets/css/product-page-css.css
+++ b/web/assets/css/product-page-css.css
@@ -280,6 +280,7 @@ a, li, input, textarea, button{
 
 .product-main-mid-content {
 	background-color: #fff;
+	margin-bottom: 32px;
 }
 
 .prod-gallery-container {
